# spoonos-gmgn-agent

./: .env.template  .gitignore  README.md  gmgn_scraper.py  instruction.md  main.py  pyproject.toml  server.py
extension/: manifest.json  sidepanel.html  sidepanel.js
spoon/core/: agents.py  llm.py  tools.py
